<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/default_margin_size"
    android:layout_marginEnd="@dimen/default_margin_size"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/search_by_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_size"
        android:layout_marginBottom="@dimen/default_margin_size"
        android:text="@string/search_by_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_city_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_size"
        android:layout_marginBottom="@dimen/default_margin_size"
        android:hint="@string/enter_city_name_hint"
        app:counterEnabled="true"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_get_weather"
        app:endIconMode="custom"
        app:helperText="@string/enter_city_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_by_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_city_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/weather_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin_size"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_city_name_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_size"
            android:layout_marginBottom="@dimen/default_margin_size"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/location_label_text" />

            <TextView
                android:id="@+id/location_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="mountain view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/temperature_label_text" />

            <TextView
                android:id="@+id/temperature_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/wind_speed_label_text" />

            <TextView
                android:id="@+id/wind_speed_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/humidity_label_text" />

            <TextView
                android:id="@+id/humidity_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/visibility_label_text" />

            <TextView
                android:id="@+id/visibility_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/time_of_sunrise_label_text" />

            <TextView
                android:id="@+id/time_of_sunrise_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_size"
                android:text="@string/time_of_sunset_label_text" />

            <TextView
                android:id="@+id/time_of_sunset_text_view"
                style="@style/value_field_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_city_name_layout">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/no_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_city_name_layout"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin_size"
            android:gravity="center"
            android:text="@string/no_weather_text" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>